objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>CN_CS_Support_Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CN_Non_Product_Support_Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CN_Support_Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CN_Accepted_Date__c</fullName>
        <label>Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Account_Sales_Team__c</fullName>
        <formula>Account.CN_Sales_Team_UI__r.Name</formula>
        <label>Sales Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Actual_Return_Consistent_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is the actual return consistent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Appraise__c</fullName>
        <label>Appraise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Base_Unit_of_Measure__c</fullName>
        <formula>Product.CN_Base_Unit_of_Measure__c</formula>
        <label>Base Unit of Measure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Brand__c</fullName>
        <formula>TEXT(Product.CN_Brand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_CS_Feedback__c</fullName>
        <label>CS Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Cancel_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Closed_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Complaint_Date__c</fullName>
        <label>Complaint Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Created_by_Me__c</fullName>
        <formula>CreatedById =  $User.Id || CN_Submitter__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Claim_Amount_CNY__c</fullName>
        <label>Customer Claim Amount CNY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Code__c</fullName>
        <formula>Account.CN_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Compensation__c</fullName>
        <description>赔偿要求</description>
        <label>Customer Compensation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_DN_Date__c</fullName>
        <description>配送时间</description>
        <label>DN Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_DN__c</fullName>
        <label>Delivery Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Duration__c</fullName>
        <formula>IF(  ISBLANK( CN_Resolved_Date__c ), 0, CN_Resolved_Date__c - CN_Accepted_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_During_Days__c</fullName>
        <formula>CASE(
 CN_Duration__c ,
 null, &quot;&quot;,
 0, &quot;1. &lt;3 Days&quot;, 1, &quot;1. &lt;3 Days&quot;, 2, &quot;1. &lt;3 Days&quot;,
 3, &quot;2. 3-7 Days&quot;, 4, &quot;2. 3-7 Days&quot;, 5, &quot;2. 3-7 Days&quot;, 6, &quot;2. 3-7 Days&quot;, 7, &quot;2. 3-7 Days&quot;,
 8, &quot;3. 8-14 Days&quot;, 9, &quot;3. 8-14 Days&quot;,  10, &quot;3. 8-14 Days&quot;, 11, &quot;3. 8-14 Days&quot;, 12, &quot;3. 8-14 Days&quot;,  13, &quot;3. 8-14 Days&quot;,  14, &quot;3. 8-14 Days&quot;,
 &quot;4. &gt;14 Days&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>During Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_EN_Name__c</fullName>
        <description>产品英文名称</description>
        <label>EN Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Customer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Must select indirect account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Edit Indirect</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Complaints</relationshipLabel>
        <relationshipName>Complaints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Excel_File_link__c</fullName>
        <description>Url field to store excel file which is generated from interface.</description>
        <label>Excel File link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CN_Excel_Generation_Time__c</fullName>
        <label>Excel Generation Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>CN_Expiry_Date__c</fullName>
        <description>保质期至</description>
        <label>Expiry Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Foreign_Matter__c</fullName>
        <description>异物问题</description>
        <label>FOREIGN MATTER</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Protain</fullName>
                    <label>Protain杂物</label>
                </value>
                <value>
                    <fullName>Insect</fullName>
                    <label>Insect昆虫</label>
                </value>
                <value>
                    <fullName>Metal</fullName>
                    <label>Metal金属</label>
                </value>
                <value>
                    <fullName>Plastic</fullName>
                    <label>Plastic塑料</label>
                </value>
                <value>
                    <fullName>Others</fullName>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_If_Creator_Equals_Account_Sales__c</fullName>
        <formula>CreatedById =  Account.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>If Creator Equals Account Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_If_Need_Share_To_Creator__c</fullName>
        <formula>CreatedBy.UserRole.DeveloperName  = &apos;CN_CS&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>If Need Share To Creator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_My_Case__c</fullName>
        <formula>OR(
   OwnerId =  $User.Id ,
   $Profile.Name = &apos;System Administrator&apos;,
   $Profile.Name =&apos;CN C/S&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Latest_Excel_Generate_Time__c</fullName>
        <label>Latest Excel Generate Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_MG_Case_Id__c</fullName>
        <externalId>true</externalId>
        <label>MG Case ID</label>
        <length>33</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Need_Send_MG_Flag__c</fullName>
        <label>Need Send MG Flag</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_Old_Status__c</fullName>
        <label>Old Status records</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Other__c</fullName>
        <label>Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Other_problem_images__c</fullName>
        <description>其他问题图片</description>
        <label>Other problem images</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CN_Package__c</fullName>
        <description>包装问题</description>
        <label>PACKAGE</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Label</fullName>
                </value>
                <value>
                    <fullName>Damaged pre packaging</fullName>
                </value>
                <value>
                    <fullName>Damaged outer box</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Packaging_issue_image__c</fullName>
        <description>包装问题图片</description>
        <label>Packaging issue image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CN_Please_Confirm__c</fullName>
        <formula>$Label.CN_Complaint_Submit_Message</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Please Confirm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Product_Problem__c</fullName>
        <description>产品</description>
        <label>PRODUCT PROBLEM</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deterioration moldy</fullName>
                </value>
                <value>
                    <fullName>Product damage</fullName>
                </value>
                <value>
                    <fullName>Usage issues</fullName>
                </value>
                <value>
                    <fullName>Foreign body</fullName>
                </value>
                <value>
                    <fullName>Original box shortage</fullName>
                </value>
                <value>
                    <fullName>Size</fullName>
                </value>
                <value>
                    <fullName>Insufficient net content</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Sensory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Product_issue_image__c</fullName>
        <description>产品问题图片</description>
        <label>Product issue image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CN_Production_Date__c</fullName>
        <description>生产日期</description>
        <label>Production Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_QA_Compliant_Number__c</fullName>
        <label>QA Complaint Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Recall_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recall Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Recall_Date__c</fullName>
        <label>Recall Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Reject_Datetime__c</fullName>
        <label>Reject Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CN_Rejected_Date__c</fullName>
        <label>Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Relate_Sales_Order_ID__c</fullName>
        <label>Relate Sales Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Relate_Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relate Sales Order</label>
        <referenceTo>CN_Sales_Order__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Sales_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Resolve_Comments__c</fullName>
        <label>Resolve Comments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Sampling</fullName>
                </value>
                <value>
                    <fullName>Explanation</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Resolve_Description__c</fullName>
        <label>Resolve Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CN_Resolve_Reason__c</fullName>
        <label>Resolve Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Quality</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                    <isActive>false</isActive>
                    <label>Customer Service</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Resolved_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resolved Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Resolved_Date__c</fullName>
        <label>Resolved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_SAP_Batch_Number__c</fullName>
        <label>SAP Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SKU_CODE__c</fullName>
        <formula>Product.CN_SKU_Code__c</formula>
        <label>SKU CODE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SKU_Description_CN__c</fullName>
        <formula>Product.CN_SKU_Description_CN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Description CN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SKU_Description_EN__c</fullName>
        <formula>Product.CN_SKU_Description_EN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Description EN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SKU_Name_EN__c</fullName>
        <formula>Product.CN_Product_Name_EN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Name EN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SKU_Name__c</fullName>
        <formula>Product.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_SKU_Quantity__c</fullName>
        <label>SKU Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CN_SKU_Specifications__c</fullName>
        <label>SKU Specifications</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ML</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sales_Office__c</fullName>
        <formula>CASE(Account.Owner.CN_Sales_Office__c,&apos;B100&apos;,&apos;B100-TianJin&apos;, &apos;K010&apos;, &apos;K010-ShangHai&apos;, &apos;K020&apos;, &apos;K020-BeiJing&apos;,&apos;&apos;,&apos;K030-ShenZhen&apos;,&apos;K040&apos;,&apos;K040-GuangZhou&apos;,&apos;K050&apos;,&apos;K050-ChengDu&apos;,&apos;K060&apos;,&apos;K060-DaLian&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Person__c</fullName>
        <formula>Account.CN_Sales_Person_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Subject__c</fullName>
        <formula>Account.Name + &quot;-&quot; + Account.CN_Customer_Code__c + &quot;-&quot; + IF($RecordType.Name = &apos;CN_Complaint&apos;, &apos;产品投诉&apos;,
    IF($RecordType.Name = &apos;CN_Non_Product_Complaint&apos;, &apos;非产品投诉&apos;,
        IF($RecordType.Name = &apos;CN_Service_Online&apos;, &apos;在线服务投诉&apos;, &apos;DefaultFallbackValue&apos;)
    )
)</formula>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Submit_Datetime__c</fullName>
        <label>Submit Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CN_Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Suggestion__c</fullName>
        <label>Suggestion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CN_WS_Account_Name__c</fullName>
        <label>WS-account name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CN_WS_Telephone__c</fullName>
        <label>WS-telephone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.REASON</columns>
        <columns>CN_Complaint_Date__c</columns>
        <columns>CN_Account_Sales_Team__c</columns>
        <columns>CN_SKU_CODE__c</columns>
        <columns>CN_SKU_Quantity__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Complaints</label>
    </listViews>
    <listViews>
        <fullName>CN_Canceled_Complaint</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Canceled</value>
        </filters>
        <label>Canceled Complaint</label>
    </listViews>
    <listViews>
        <fullName>CN_Customer_Service</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>CN_Customer_Service</label>
        <queue>CN_CS_Queue</queue>
    </listViews>
    <listViews>
        <fullName>CN_Food_Quality</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>CN_Food_Quality</label>
        <queue>CN_Food_Quality</queue>
    </listViews>
    <listViews>
        <fullName>CN_Food_Quality_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CN_Food_Quality</label>
        <queue>CN_Food_Quality</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CN_Legal</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>CN_Legal</label>
        <queue>CN_QA_Queue</queue>
    </listViews>
    <listViews>
        <fullName>CN_Legal_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CN_Legal</label>
        <queue>CN_Legal</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Food_Quality_Test01_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CN_Food_Quality</label>
        <queue>CN_Food_Quality</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.REASON</columns>
        <columns>CN_Subject__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>CASES.SUBJECT</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>notEqual</operation>
            <value>eCom</value>
        </filters>
        <label>My Case</label>
        <queue>CN_CS_Queue</queue>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.REASON</columns>
        <columns>CN_Complaint_Date__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CN_Account_Sales_Team__c</columns>
        <columns>CN_SKU_CODE__c</columns>
        <columns>CN_SKU_Quantity__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,Assigned,Accepted,Resolved</value>
        </filters>
        <label>My Open Complaints</label>
    </listViews>
    <listViews>
        <fullName>QA_Queue_Test01_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CN_Legal</label>
        <queue>CN_Legal</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>CN_Complaint</fullName>
        <active>true</active>
        <businessProcess>CN_Support_Process</businessProcess>
        <label>CN_Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>CN_Non_Product_Complaint</fullName>
        <active>true</active>
        <businessProcess>CN_Non_Product_Support_Process</businessProcess>
        <label>CN_Non_Product_Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>CN_Service_Online</fullName>
        <active>true</active>
        <businessProcess>CN_CS_Support_Process</businessProcess>
        <label>CN_Service_Online</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CN_Case_Check_Product_Info</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  ISPICKVAL(Reason , &quot;Quality&quot;), 
  ISBLANK(ProductId)|| ISBLANK( CN_SAP_Batch_Number__c )  || ISBLANK( CN_SKU_Quantity__c ) || ISBLANK( CN_DN__c )
)</errorConditionFormula>
        <errorDisplayField>Reason</errorDisplayField>
        <errorMessage>Please fill in Product, SKU Quantity, DN and SAP Batch Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Case_Other_Mandatory_Check</fullName>
        <active>true</active>
        <description>Mandatory check for Other</description>
        <errorConditionFormula>AND(
  OR(
    INCLUDES(CN_Product_Problem__c, &apos;Other&apos;),
    INCLUDES(CN_Foreign_Matter__c, &apos;Others&apos;),
    INCLUDES(CN_Package__c, &apos;Other&apos;)
  ),
  ISBLANK(CN_Other__c)
)</errorConditionFormula>
        <errorDisplayField>CN_Other__c</errorDisplayField>
        <errorMessage>Please enter the reason for your complaint</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Complaint_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  BEGINS(RecordType.DeveloperName,&quot;CN&quot;),
  OR(
    ISNEW(),
    ISCHANGED(CN_Complaint_Date__c )
  ),
  CN_Complaint_Date__c &gt; TODAY()
)</errorConditionFormula>
        <errorDisplayField>CN_Complaint_Date__c</errorDisplayField>
        <errorMessage>Complaint cannot be later than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Complaint_Check_Reason_CS</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  BEGINS(RecordType.DeveloperName,&quot;CN&quot;),
  $Profile.Name = &quot;CN C/S&quot;,
  ISPICKVAL(CN_Resolve_Reason__c, &quot;Brand Quality&quot;)
)</errorConditionFormula>
        <errorDisplayField>CN_Resolve_Reason__c</errorDisplayField>
        <errorMessage>You can&apos;t set the Resolve Reason as &quot;Brand Quality&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Complaint_Check_Reason_QA</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  BEGINS(RecordType.DeveloperName,&quot;CN&quot;),
  $Profile.Name = &quot;CN QA&quot;,
  ISPICKVAL(CN_Resolve_Reason__c, &quot;Customer Service&quot;)
)</errorConditionFormula>
        <errorDisplayField>CN_Resolve_Reason__c</errorDisplayField>
        <errorMessage>You can&apos;t set the Resolve Reason as &quot;Customer Service&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Complaint_Check_Status_Accepted</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  BEGINS(RecordType.DeveloperName,&quot;CN&quot;),
  NOT(ISNEW()),
  ISPICKVAL( PRIORVALUE(Status) , &apos;Accepted&apos;),
  ISPICKVAL( Origin , &apos;E-Commerce&apos;),
  OR(
    AND(ISPICKVAL( Status, &apos;Resolved&apos;),NOT(CN_Resolved_Button__c)),
    NOT(OR(ISPICKVAL(Status, &apos;Accepted&apos;),ISPICKVAL(Status,&apos;Resolved&apos;)))
  )
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You are not allowed to change the status manually</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Complaint_Check_Status_Assigned</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  BEGINS(RecordType.DeveloperName,&quot;CN&quot;),
  ISPICKVAL( PRIORVALUE(Status) , &apos;Assigned&apos;),
  OR(
    AND( 
      OR(ISPICKVAL( Status, &apos;Rejected&apos;),ISPICKVAL( Status, &apos;Accepted&apos;)),
      NOT(ISCHANGED(OwnerId))
    ),
    NOT(OR(
      ISPICKVAL(Status,&apos;Assigned&apos;),
      ISPICKVAL(Status,&apos;Rejected&apos;),
      ISPICKVAL(Status,&apos;Accepted&apos;),
      ISPICKVAL(Status,&apos;New&apos;)
    )),
    AND(
      ISPICKVAL(Status,&apos;New&apos;),
      IF(
        CN_Recall_Button__c,
        IF(ISCHANGED(CN_Recall_Button__c),FALSE,NOT(ISCHANGED(CN_Recall_Date__c))),
        TRUE
      )
    )
  )
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You are not allowed to change the status manually.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Complaint_Check_Status_Creation</fullName>
        <active>true</active>
        <description>status must be new while creating the complaint</description>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  BEGINS(RecordType.DeveloperName,&quot;CN&quot;),
  ISNEW(),
  NOT(ISPICKVAL( Status , &apos;New&apos;))
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You are not allowed to change the status manually</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Complaint_Check_Status_New</fullName>
        <active>true</active>
        <description>when update the record, prevent edit the status manually</description>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(RecordType.DeveloperName = &apos;CN_Service_Online&apos;),
  NOT(ISPICKVAL( Origin , &apos;E-Commerce&apos;)),
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  BEGINS(RecordType.DeveloperName,&quot;CN&quot;),
  NOT(ISNEW()),
  ISPICKVAL( PRIORVALUE(Status) , &apos;New&apos;),
  OR(
    AND(ISPICKVAL( Status, &apos;Assigned&apos;),NOT(ISCHANGED( CN_Submit_Datetime__c ))),
    AND(ISPICKVAL( Status, &apos;Canceled&apos;),NOT(ISCHANGED( CN_Cancel_Button__c))),
    NOT(OR(ISPICKVAL(Status, &apos;New&apos;),ISPICKVAL(Status,&apos;Assigned&apos;),ISPICKVAL( Status, &apos;Canceled&apos;)))
  ),
  NOT(OR(ISPICKVAL(Status, &apos;Accepted&apos;),ISPICKVAL(Status,&apos;Rejected&apos;)))
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You are not allowed to change the status manually</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Complaint_Check_Status_Rejected</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  BEGINS(RecordType.DeveloperName,&quot;CN&quot;),
  ISPICKVAL( PRIORVALUE(Status) , &apos;Rejected&apos;),
  OR(
    AND(ISPICKVAL( Status, &apos;Assigned&apos;),NOT(ISCHANGED( CN_Submit_Datetime__c))),
    NOT(OR(ISPICKVAL(Status, &apos;Rejected&apos;),ISPICKVAL(Status,&apos;Assigned&apos;)))
  ),  
  NOT(ISPICKVAL(Status, &apos;Closed&apos;))
)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You are not allowed to change the status manually</errorMessage>
    </validationRules>
</CustomObject>